# BohorquezAILabs

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
docker/: README.md  docker-compose.yml
pages/: 1_Libranzas.py  2_Clustering.py
pages/mlruns/0/: meta.yaml
pages/mlruns/0/af0ce2a88a284debaebcb35842d02ded/: meta.yaml  run.yaml
pages/mlruns/0/af0ce2a88a284debaebcb35842d02ded/metrics/: accuracy  auc  f1_score  log_loss  precision  recall
pages/mlruns/0/af0ce2a88a284debaebcb35842d02ded/tags/: mlflow.runName  mlflow.source.name
