[project]
name = "bohorquezailabs"
version = "0.1.0"
description = "Página demo con dos ideas de ML (Libranzas + otra idea) usando Streamlit y MLflow"
authors = [
    { name = "Stevens Ricardo Bohorquez" }
]
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "joblib",
    "scikit-learn",
    "pandas",
    "numpy",
    "mlflow",
    "lightgbm>=4.6.0",
]

[tool.uv]

